<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llReminderInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_info"
                    android:tint="@color/app_gray"/>

                <TextView
                    android:text="@string/reminder_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:switchPadding="12dp" />

            <LinearLayout
                android:id="@+id/llIsSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/thin_gray_transparent_border">

                    <TextView
                        android:id="@+id/tvDelete"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/delete"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/thin_gray_transparent_border">

                    <TextView
                        android:id="@+id/tvEdit"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/edit"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/fallback_gray"
                    android:text="@string/time"/>

                <EditText
                    android:id="@+id/etHours"
                    android:text="12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-24dp"
                    android:layout_marginRight="4dp"
                    android:gravity="right"
                    android:background="@android:color/transparent"
                    android:textColor="@color/fallback_gray"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxLength="2"
                    android:ems="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/fallback_gray"
                    android:text="@string/colon"/>

                <EditText
                    android:id="@+id/etMins"
                    android:text="00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/fallback_gray"
                    android:gravity="left"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxLength="2"
                    android:ems="3"/>

                <RadioGroup
                    android:id="@+id/rgAmPm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-32dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbAm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:enabled="false"
                        android:text="@string/am"
                        android:textColor="@color/fallback_gray"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbPm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:enabled="false"
                        android:text="@string/pm"
                        android:textColor="@color/fallback_gray"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>